Fixed user shortcode overflow

--- a/media/fapi-member-public.css
+++ b/media/fapi-member-public.css
@@ -75,11 +75,11 @@
   grid-row: 2/3 !important;
   grid-column: 2/3 !important;
   font-size: 14px !important;
-  width: 65px !important;
+  max-width: 65px !important;
   height: 20px !important;
   text-wrap: none !important;
   word-break: break-all !important;
-  overflow: visible !important;
+  overflow: hidden !important;
   display: inline-block !important;
   vertical-align: top !important;
 }
